// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: array snippet 1`] = `
<div
  className="code-snippet spacer-top spacer-bottom display-flex-row"
>
  <pre
    className="flex-1"
    tabIndex={0}
  >
    foo \\
  bar
  </pre>
  <ClipboardButton
    copyValue="foo \\
  bar"
  />
</div>
`;

exports[`renders correctly: default 1`] = `
<div
  className="code-snippet spacer-top spacer-bottom display-flex-row"
>
  <pre
    className="flex-1"
    tabIndex={0}
  >
    foo
bar
  </pre>
  <ClipboardButton
    copyValue="foo
bar"
  />
</div>
`;

exports[`renders correctly: no copy 1`] = `
<div
  className="code-snippet spacer-top spacer-bottom display-flex-row"
>
  <pre
    className="flex-1"
    tabIndex={0}
  >
    foo
bar
  </pre>
</div>
`;

exports[`renders correctly: single line with array snippet 1`] = `
<div
  className="code-snippet spacer-top spacer-bottom display-flex-row"
>
  <pre
    className="flex-1"
    tabIndex={0}
  >
    foo bar
  </pre>
  <ClipboardButton
    copyValue="foo bar"
  />
</div>
`;
